# NetworkManager-ssh

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  NetworkManager-ssh.spec  README  README.md  SECURITY.md  aclocal.m4  config.h.in  configure  configure.ac  nm-ssh-service.conf  nm-ssh-service.name.in  nm-ssh.desktop.in  nm-test-helpers.h
.github/workflows/: build.yml  build_fedora.yml  build_fedora_latest.yml  build_fedora_rawhide.yml  build_rocky_9.yml  build_ubuntu.yml  build_ubuntu_latest.yml
auth-dialog/: .gitignore  Makefile.am  Makefile.in  main.c  vpn-password-dialog.c
common/: Makefile.am  Makefile.in  utils.c  utils.h
debian/: changelog  control  copyright  gbp.conf  network-manager-openvpn-ssh.install  network-manager-openvpn.install  network-manager-ssh.install  rules  watch
debian/patches/: auth_dialog_libexecdir.patch  series
m4/: .gitignore  compiler_warnings.m4
metainfo/: network-manager-ssh.metainfo.xml.in
po/: .gitignore  LINGUAS  POTFILES.in  POTFILES.skip  ar.po  as.po  bg.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hu.po  id.po  it.po  ja.po  ka.po  kn.po  ko.po  lt.po  lv.po  mk.po  mr.po  nb.po  nl.po  pa.po  pl.po  ps.po  (+16 more)
properties/: .gitignore  Makefile.am  Makefile.in  advanced-dialog.c  advanced-dialog.h  auth-helpers.c  auth-helpers.h  gresource.xml  import-export.c  nm-ssh-dialog.ui  nm-ssh-editor-plugin.c  nm-ssh-editor-plugin.h  nm-ssh-editor.c  nm-ssh-editor.h  nm-ssh.c  nm-ssh.h
properties/tests/: Makefile.am  Makefile.in  test-import-export.c
properties/tests/conf/: Makefile.am  Makefile.in  password.conf  proxy-http-with-auth.ovpn  proxy-http.ovpn  proxy-socks.ovpn  tls.ovpn  tun-opts.conf
selinux/: NetworkManager-ssh.te  build-policy.sh
shared/: nm-default.h  nm-service-defines.h
shared/nm-utils/: .gitignore  nm-shared-utils.c  nm-shared-utils.h
src/: .gitignore  Makefile.am  Makefile.in  nm-ssh-service-defines.h  nm-ssh-service-ssh-helper.c  nm-ssh-service.c  nm-ssh-service.h
test/: Vagrantfile  nm-ssh-server.sh
